Fix too long title.

--- a/main.tex
+++ b/main.tex
@@ -44,7 +44,7 @@
 \JHPSauthor{Eugen Betke}{DKRZ\\Hamburg, Germany}{}{betke@dkrz.de}
 \JHPSauthor{Julian Kunkel}{University of Reading\\Reading, UK}{https://hps.vi4io.org/about/people/julian_kunkel}{j.m.kunkel@reading.ac.uk}   % use empty email here
 
-\title{Classifying Temporal Characteristics of Job I/O Patterns Using Machine Learning Techniques}
+\title{Classifying Temporal Characteristics of Job I/O Using Machine Learning Techniques}
 
 % add the section numbers to the listings/figures/tables
 \counterwithin{lstlisting}{section}
