--- a/main.tex
+++ b/main.tex
@@ -154,7 +154,7 @@ In our previous work, we computed three high-level metrics per job that aid user
 
 \begin{figure}[!bt]
 	\centering
-	\includegraphics[width=2.02in,height=2.52in]{image4.png}
+	\includegraphics[width=2.75in]{image4.png}
 	\caption{Example job-level metric.
 Score is the sum of all node scores.}
 	\label{fig:seg_example}
@@ -190,19 +190,19 @@ In practice, different jobs show a different runtime, and even when re-running t
 \begin{figure}
         \centering
          \begin{subfigure}[t]{\textwidth}
-           \includegraphics[width=4.61in,height=1.54in]{image27.png}
+           \includegraphics[width=\textwidth]{image27.png}
            \caption{Job A runs on 13 nodes}
            \label{fig:typ_io:1}
          \end{subfigure}
 
         \begin{subfigure}[t]{\textwidth}
-           \includegraphics[width=4.61in,height=1.54in]{image28.png}
+           \includegraphics[width=\textwidth]{image28.png}
            \caption{Job B runs on 225 nodes}
            \label{fig:typ_io:2}
          \end{subfigure}
 
         \begin{subfigure}[t]{\textwidth}
-          \includegraphics[width=4.61in,height=1.54in]{image25.png}
+          \includegraphics[width=\textwidth]{image25.png}
           \caption{Job C runs on 40 nodes}
           \label{fig:typ_io:3}
         \end{subfigure}
